# DistributedSystems

./: README.md  cmd_prueba.py  run_client  setup.cfg
configs/: client.config  main.config
iceflix/: cli.py  client.py  client_cmd.py  client_cmdP.py  client_prueba-py  client_prueba.py  cmd_prueba.py  main_prueba.py  prueba.py  prueba2.py
