[metadata]
name = IceFlix Template
version = 1.0.0
description = Template package to use in the IceFlix laboratory

[options]
packages = find:
install_requires =
    zeroc-ice>=3.7.0
    colorama==0.4.6

[options.package_data]
* = *.ice

[options.entry_points]
# Keep only the one you need, remove the rest
console_scripts =
    iceflix = iceflix.cli:client
